--- a/static/styles.css
+++ b/static/styles.css
@@ -1,16 +1,46 @@
-body {
-    text-align: center;
-    font-family: Arial, sans-serif;
+* {
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-size: 20px;
+    font-style: normal;
+    color: #36393B;
 }
 
-canvas {
-    border: 2px solid black;
-    margin-top: 20px;
+.navbar {
+    justify-content: center;
+    background-color: #007bff;
+    border-radius: 20px;
+}
+
+.container-fluid {
+    border: 5px solid #333;
+    border-radius: 20px;
+    padding: 20px;
+    width: 75%;
+}
+
+body {
+    margin: 0;
+    padding: 20px;
+}
+
+#drawingCanvas {
+    border: 5px solid #333;
+    border-radius: 20px;
 }
 
 button {
-    margin-top: 10px;
+    display: block;
+    margin: 20px auto;
     padding: 10px 20px;
-    font-size: 16px;
+    background-color: #007bff;
+    border: none;
+    border-radius: 10px;
+    color: white;
     cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
 }
